------------------------------------------------------------------------
r1973 | dahnke | 2022-03-16 15:30:49

Changed paths:
M       CHANGES.txt
M       cat_io_volctype.m
M       cat_long_main.m
M       cat_long_multi_run.m
M       cat_long_report.m
M       cat_main_reportfig.m
M       cat_main_updateSPM.m
M       cat_main_updateSPM1639.m
M       cat_surf_create_TPM_hull_surface.m

(1) Fixed:     Corrected trimming and sanlm batch setup in cat_long_main.
(2) Fixed:     Corrected skull-stripping bug in cat_main_updateSPM again.
(3) Fixed:     Corrected display bugs in cat_io_volctype.
(4) Changed:   Improved differentiation of TPM cases in 
               cat_surf_create_TPM_hull_surface. 
(5) New:       Added creation of catlong XML file to save longitudinal
               parameters in cat_long_multi_run and cat_long_report.              

------------------------------------------------------------------------
r1972 | dahnke | 2022-03-16 11:32:57 +0100 (Wed, 16 Mar 2022) | 13 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_tools.m
M       cat_run_job.m
M       cat_run_job1639.m
M       cat_vol_headtrimming.m

(1) Fixed:     Corrected bugs in cat_vol_headtrimming in case of multiple inputs 
               per subject. Removed average parameter (also in cat_conf_tools). 
(2) Fixed:     Improved handling of background detection in case of skull-
               stripped images in cat_run_job(1639).


------------------------------------------------------------------------
r1971 | gaser | 2022-03-08 13:43:17 +0100 (Tue, 08 Mar 2022) | 10 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_stat_check_cov.m
M       check_pipeline_homogeneity.m
M       html/cat.html

(1) Changed: Updated check_pipeline_homogeneity.m to ignore older versions.
(2) Fixed:   Corrected indexing of data_vol field in cat_stat_check_cov.m.

------------------------------------------------------------------------